# cpppp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  example.h  main.cpp  test.h
.trunk/: trunk.yaml
.trunk/config/: .clang-format  .clangd
examples/: example.h  macros.h
lib/: CMakeLists.txt  codegen.h  interpreter.cpp  interpreter.h  lexemes.cpp  lexemes.h  parser.cpp  parser.h
src/: CMakeLists.txt  codegen.h  interpreter.cpp  interpreter.h  lexemes.cpp  main.cpp  parser.cpp  parser.h  token.cpp  token.h  version.h
test/: CMakeLists.txt  lexeme.cpp  token.cpp
